# meeting-minutes-workflow

./: .gitignore  AGENTS.md  CONTEXT.md  HOW_TO_USE.md  LICENSE  README.md  pyproject.toml
docs/: IMPLEMENTATION_RESEARCH.md  PROJECT_PLAN.md  RUNBOOK.md  SETUP.md
docs/adr/: 0001-markdown-as-canonical-output.md  0002-audio-stays-out-of-llm-processing.md  0003-preserve-only-the-canonical-transcript.md  0004-run-metadata-file.md  0005-codex-run-workflow.md  0006-python-for-v1.md  0007-project-environment-and-model-cache.md  0008-local-transcription-requirements.md  0009-codex-llm-and-python-workflow-split.md  0010-prefer-pandoc-for-word-export.md  0011-use-whisperkit-for-apple-silicon-audio.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
prompts/: actions.md  decisions.md  minutes.md  overview.md  transcript-cleanup.md
scripts/: setup_project.py
src/meeting_minutes_workflow/: __init__.py  __main__.py  audio.py  cli.py  combined.py  commands.py  doctor.py  first_time_setup.py  run_metadata.py  setup_readiness.py  source_material.py  transcript_preparation.py  validation.py  workflow.py  workflow_run.py
src/meeting_minutes_workflow/export/: __init__.py  docx_tables.py  pandoc.py  word.py
src/meeting_minutes_workflow/extractors/: __init__.py
tests/: test_cli_workflow_commands.py  test_prepare_run.py  test_transcript_helpers.py
