[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-minutes-workflow"
version = "0.1.0"
description = "Codex-run meeting minutes workflow helpers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mammoth>=1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
meeting-minutes = "meeting_minutes_workflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_minutes_workflow"]
